replace old terms with recent ones

--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -1,18 +1,18 @@
 <?xml version = "1.0" encoding = "UTF-8"?>
 <properties>
-  <entry key="xr:Buyer_reference" id="BT-10">Buyer reference</entry> <!-- Routing-ID -->
+  <entry key="xr:Buyer_reference" id="BT-10">Routing-ID</entry>
   <entry key="xr:Buyer_name" id="BT-44">Name</entry>
   <entry key="xr:Buyer_address_line_1" id="BT-50">Address line 1</entry>
   <entry key="xr:Buyer_address_line_2" id="BT-51">Address line 2</entry>
   <entry key="xr:Buyer_address_line_3" id="BT-163">Address line 3</entry>
   <entry key="xr:Buyer_post_code" id="BT-53">ZIP</entry>
   <entry key="xr:Buyer_city" id="BT-52">Location</entry>
-  <entry key="xr:Buyer_country_code" id="BT-55">Country code</entry> <!-- Country -->
+  <entry key="xr:Buyer_country_code" id="BT-55">Countrye</entry>
   <entry key="xr:Buyer_identifier" id="BT-46">Identifier</entry>
   <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46_scheme">Scheme identifier</entry>
-  <entry key="xr:Buyer_contact_point" id="BT-56">Contact point</entry> <!-- Name -->
-  <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Contact point phone</entry> <!-- Phone -->
-  <entry key="xr:Buyer_contact_email_address" id="BT-58">Contact point email</entry> <!-- E-Mail address -->
+  <entry key="xr:Buyer_contact_point" id="BT-56">Name</entry>
+  <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Phone</entry>
+  <entry key="xr:Buyer_contact_email_address" id="BT-58">E-Mail address</entry>
   <entry key="xr:Seller_name" id="BT-27">Company name</entry>
   <entry key="xr:Seller_address_line_1" id="BT-35">Address line 1</entry>
   <entry key="xr:Seller_address_line_2" id="BT-36">Address line 2</entry>
@@ -23,20 +23,20 @@
   <entry key="xr:Seller_country_code" id="BT-40">Country code</entry>
   <entry key="xr:Seller_identifier" id="BT-29">Identifier</entry>
   <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29_scheme">Scheme identifier</entry>
-  <entry key="xr:Seller_contact_point" id="BT-41">Contact point</entry> <!-- Name -->
-  <entry key="xr:Seller_contact_telephone_number" id="BT-42">Contact point phone</entry> <!-- Phone -->
-  <entry key="xr:Seller_contact_email_address" id="BT-43">Contact point email</entry> <!-- E-Mail address -->
+  <entry key="xr:Seller_contact_point" id="BT-41">Name</entry>
+  <entry key="xr:Seller_contact_telephone_number" id="BT-42">Phone</entry>
+  <entry key="xr:Seller_contact_email_address" id="BT-43">E-Mail address</entry>
   <entry key="xr:Invoice_number" id="BT-1">Invoice number</entry>
   <entry key="xr:Invoice_issue_date" id="BT-2">Invoice date</entry>
   <entry key="xr:Invoice_type_code" id="BT-3">Invoice type</entry>
   <entry key="xr:Invoice_currency_code" id="BT-5">Currency</entry>
-  <entry key="xr:Project_reference" id="BT-11">Project reference</entry> <!-- Project number -->
-  <entry key="xr:Contract_reference" id="BT-12">Contract reference</entry> <!-- Contract number -->
-  <entry key="xr:Purchase_order_reference" id="BT-13">Purchase order reference</entry> <!-- Order number -->
-  <entry key="xr:Sales_order_reference" id="BT-14">Sales order reference</entry> <!-- Order number -->
+  <entry key="xr:Project_reference" id="BT-11">Project number</entry>
+  <entry key="xr:Contract_reference" id="BT-12">Contract number</entry>
+  <entry key="xr:Purchase_order_reference" id="BT-13">Order number</entry>
+  <entry key="xr:Sales_order_reference" id="BT-14">Order number</entry>
   <!-- Be aware that these are for the whole invoice -->
   <entry key="xr:Invoicing_period_start_date" id="BT-73">From</entry>
-  <entry key="xr:Invoicing_period_end_date" id="BT-74">To</entry> <!-- to -->
+  <entry key="xr:Invoicing_period_end_date" id="BT-74">To</entry>
   <entry key="xr:Preceding_Invoice_reference" id="BT-25">Invoice number</entry>
   <entry key="xr:Preceding_Invoice_issue_date" id="BT-26">Invoice date</entry>
   <entry key="xr:Sum_of_Invoice_line_net_amount" id="BT-106">Total invoice line amounts</entry>
@@ -46,7 +46,7 @@
   <entry key="xr:Invoice_total_VAT_amount" id="BT-110">Total VAT</entry>
   <entry key="xr:Invoice_total_VAT_amount_in_accounting_currency" id="BT-111">Total VAT in accounting currency</entry>
   <entry key="xr:Invoice_total_amount_with_VAT" id="BT-112">Total amount</entry> 
-  <entry key="xr:Paid_amount" id="BT-113">Already paid</entry> <!-- Amount paid -->
+  <entry key="xr:Paid_amount" id="BT-113">Amount paid</entry>
   <entry key="xr:Rounding_amount" id="BT-114">Rounding amount</entry>
   <entry key="xr:Amount_due_for_payment" id="BT-115">Amount due</entry>
   <entry key="xr:VAT_category_code" id="BT-118">VAT category</entry>
@@ -59,41 +59,41 @@
   <entry key="xr:Document_level_allowance_VAT_category_code" id="BT-95">Allowance VAT category code</entry>
   <entry key="xr:Document_level_allowance_base_amount" id="BT-93">Base amount</entry>
   <entry key="xr:Document_level_allowance_percentage" id="BT-94">Percentage</entry>
-  <entry key="xr:Document_level_allowance_amount" id="BT-92">Amount</entry> <!-- Discount -->
+  <entry key="xr:Document_level_allowance_amount" id="BT-92">Discount</entry>
   <entry key="xr:Document_level_allowance_VAT_rate" id="BT-96">Allowance VAT rate</entry>
-  <entry key="xr:Document_level_allowance_reason" id="BT-97">Allowance reason</entry> <!-- Reason for the discount -->
+  <entry key="xr:Document_level_allowance_reason" id="BT-97">Reason for the discount</entry>
   <entry key="xr:Document_level_allowance_reason_code" id="BT-98">Allowance reason code</entry>
   <!-- Charges -->
   <entry key="xr:Document_level_charge_VAT_category_code" id="BT-102">Charge VAT category code</entry>
   <entry key="xr:Document_level_charge_base_amount" id="BT-100">Base amount</entry>
   <entry key="xr:Document_level_charge_percentage" id="BT-101">Percentage</entry>
-  <entry key="xr:Document_level_charge_amount" id="BT-99">Amount</entry> <!-- Surcharge -->
+  <entry key="xr:Document_level_charge_amount" id="BT-99">Surcharge</entry>
   <entry key="xr:Document_level_charge_VAT_rate" id="BT-103">VAT rate</entry> <!-- <entry key="Umsatzsteuersatz des Zuschlages">Umsatzsteuersatz des Zuschlages</entry> -->
   <entry key="xr:Document_level_charge_reason" id="BT-104">Charge Reason</entry>
   <entry key="xr:Document_level_charge_reason_code" id="BT-105">Charge reason code</entry>
-  <entry key="xr:Payment_terms" id="BT-20">Payment terms</entry> <!-- <entry key="Skonto; weitere Zahlungsbedingungen">Discount; other payment terms</entry> -->
+  <entry key="xr:Payment_terms" id="BT-20">Discount; other payment terms</entry>
   <entry key="xr:Payment_due_date" id="BT-9">Due date</entry>
-  <entry key="xr:Payment_means_type_code" id="BT-81">Payment means type code</entry> <!-- Code for the payment means -->
+  <entry key="xr:Payment_means_type_code" id="BT-81">Code for the payment means</entry>
   <entry key="xr:Payment_means_text" id="BT-82">Payment means</entry>
   <entry key="xr:Remittance_information" id="BT-83">Remittance information</entry>
   <entry key="xr:Payment_card_primary_account_number" id="BT-87">Card number</entry>
   <entry key="xr:Payment_card_holder_name" id="BT-88">Card holder</entry>
   <!-- BG-19 Direct Debit -->
   <entry key="xr:Mandate_reference_identifier" id="BT-89">Mandate reference no.</entry>
-  <entry key="xr:Debited_account_identifier" id="BT-91">Debited account identifier</entry> <!-- IBAN -->
+  <entry key="xr:Debited_account_identifier" id="BT-91">IBAN</entry>
   <entry key="xr:Bank_assigned_creditor_identifier" id="BT-90">Creditor ID</entry>
   <!-- BG-17 Credit Transfer-->
   <entry key="xr:Payment_account_name" id="BT-85">Account holder</entry>
-  <entry key="xr:Payment_account_identifier" id="BT-84">Account identifier</entry> <!-- IBAN -->
+  <entry key="xr:Payment_account_identifier" id="BT-84">IBAN</entry>
   <entry key="xr:Payment_service_provider_identifier" id="BT-86">BIC</entry>
-  <entry key="xr:Invoice_note_subject_code" id="BT-21">Subject code</entry> <!-- <entry key="Betreff">Reference</entry> -->
-  <entry key="xr:Invoice_note" id="BT-22">Note</entry> <!-- Note -->
+  <entry key="xr:Invoice_note_subject_code" id="BT-21">Reference</entry>
+  <entry key="xr:Invoice_note" id="BT-22">Note</entry>
   <!-- BG-4 Seller and others -->
   <entry key="xr:Seller_trading_name" id="BT-28">Different trading name</entry>
   <entry key="xr:Seller_electronic_address" id="BT-34">Electronic address</entry>
   <entry key="xr:Seller_electronic_address/@scheme_identifier" id="BT-34_scheme">Electronic address
     scheme</entry>
-  <entry key="xr:Seller_legal_registration_identifier" id="BT-30">Legal registration identifier</entry> <!-- Register/registration number -->
+  <entry key="xr:Seller_legal_registration_identifier" id="BT-30">Register/registration number</entry>
   <entry key="xr:Seller_legal_registration_identifier/@scheme_identifier" id="BT-30_scheme">Legal registration identifier scheme</entry>
   <entry key="xr:Seller_VAT_identifier" id="BT-31">VAT ID</entry>
   <entry key="xr:Seller_tax_registration_identifier" id="BT-32">Tax number</entry>
@@ -115,8 +115,8 @@
   <entry key="xr:Buyer_country_subdivision" id="BT-54">State</entry>
   <entry key="xr:Buyer_electronic_address" id="BT-49">Electronic address</entry>
   <entry key="xr:Buyer_electronic_address/@scheme_identifier" id="BT-49_scheme">Electronic address scheme</entry>
-  <entry key="xr:Buyer_legal_registration_identifier" id="BT-47">Legal registration identifier</entry> <!-- Register/registration number -->
-  <entry key="xr:Buyer_legal_registration_identifier/@scheme_identifier" id="BT-47_scheme">Legal registration identifier scheme</entry> <!-- Registry/registrar number scheme -->
+  <entry key="xr:Buyer_legal_registration_identifier" id="BT-47">Register/registration number</entry>
+  <entry key="xr:Buyer_legal_registration_identifier/@scheme_identifier" id="BT-47_scheme">Registry/registrar number scheme</entry>
   <entry key="xr:Buyer_VAT_identifier" id="BT-48">VAT ID</entry>
   <entry key="xr:Value_added_tax_point_date" id="BT-7">Value added tax point date</entry>
   <entry key="xr:Value_added_tax_point_date_code" id="BT-8">Value added tax point date code</entry>
@@ -131,8 +131,8 @@
   <entry key="xr:Deliver_to_post_code" id="BT-78">ZIP</entry>
   <entry key="xr:Deliver_to_city" id="BT-77">Location</entry>
   <entry key="xr:Deliver_to_country_subdivision" id="BT-79">State</entry>
-  <entry key="xr:Deliver_to_country_code" id="BT-80">Country</entry> <!-- Country -->
-  <entry key="xr:Tender_or_lot_reference" id="BT-17">Award reference</entry> <!-- Contract number -->
+  <entry key="xr:Deliver_to_country_code" id="BT-80">Country</entry>
+  <entry key="xr:Tender_or_lot_reference" id="BT-17">Contract number</entry>
   <entry key="xr:Receiving_advice_reference" id="BT-15">Receiving advice reference</entry>
   <entry key="xr:Despatch_advice_reference" id="BT-16">Despatch advice reference</entry>
   <entry key="xr:Business_process_type" id="BT-23">Process identifier</entry>
@@ -143,14 +143,14 @@
   <entry key="xr:Payee_name" id="BT-59">Name</entry>
   <entry key="xr:Payee_identifier" id="BT-60">Identifier</entry>
   <entry key="xr:Payee_identifier/@scheme_identifier" id="BT-60_scheme">Identification scheme</entry>
-  <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Legal registration identifier</entry> <!-- Register/registration number -->
-  <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61_scheme">Legal registration identifier scheme</entry> <!-- Registry/registrar number scheme -->
+  <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Register/registration number</entry>
+  <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61_scheme">Registry/registrar number scheme</entry>
   <!-- BG 24 Additonal supporting Documents -->
   <entry key="xr:Supporting_document_reference" id="BT-122">Identifier</entry>
   <entry key="xr:Supporting_document_description" id="BT-123">Description</entry>
   <entry key="xr:External_document_location" id="BT-124">Location (e.g. Internet address )</entry>
   <entry key="xr:Attached_document" id="BT-125">Attached document</entry>
-  <entry key="xr:Attached_document/@mime_code" id="BT-125_mime_code">MIME type of the attached document</entry> <!-- Attachment document format -->
+  <entry key="xr:Attached_document/@mime_code" id="BT-125_mime_code">Attachment document format</entry>
   <entry key="xr:Attached_document/@filename" id="BT-125_filename">Name of the attachment document</entry>
   <entry key="xrv:timestamp">Date / time</entry>
   <!-- 
@@ -162,49 +162,48 @@
   <entry key="xr:Invoice_line_note" id="BT-127">Free text</entry>
   <entry key="xr:Invoice_line_object_identifier" id="BT-128_identifier">Object identifier</entry>
   <entry key="xr:Invoice_line_object_identifier/@scheme_identifier" id="BT-128_scheme">Object identifier scheme</entry>
-  <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Number of the order item</entry> <!-- Order item number -->
-  <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Buyer accounting reference</entry> <!-- Account assignment note -->
+  <entry key="xr:Referenced_purchase_order_line_reference" id="BT-132">Order item number</entry>
+  <entry key="xr:Invoice_line_Buyer_accounting_reference" id="BT-133">Account assignment note</entry>
   <entry key="xr:Invoice_line_period_start_date" id="BT-134">From</entry>
-  <entry key="xr:Invoice_line_period_end_date" id="BT-135">To</entry> <!-- to -->
+  <entry key="xr:Invoice_line_period_end_date" id="BT-135">To</entry>
   <entry key="xr:Invoiced_quantity" id="BT-129">Quantity</entry>
   <entry key="xr:Invoiced_quantity_unit_of_measure_code" id="BT-130">Unit</entry>
   <entry key="xr:Item_net_price" id="BT-146">Price per unit (net)</entry>
-  <entry key="xr:Invoice_line_net_amount" id="BT-131">Total price (net)</entry> <!-- Total price (net) -->
+  <entry key="xr:Invoice_line_net_amount" id="BT-131">Total price (net)</entry>
   <entry key="xr:Item_price_discount" id="BT-147">Discount (net)</entry>
   <entry key="xr:Item_gross_price" id="BT-148">List price (net)</entry>
-  <entry key="xr:Item_price_base_quantity" id="BT-149">Price unit</entry> <!-- Number of units -->
-  <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Unit code</entry> <!-- Unit code -->
-  <entry key="xr:Invoiced_item_VAT_category_code" id="BT-151">VAT category</entry> <!-- Value added tax -->
-  <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">VAT rate (%)</entry> <!-- VAT rate in percent -->
+  <entry key="xr:Item_price_base_quantity" id="BT-149">Number of units</entry>
+  <entry key="xr:Item_price_base_quantity_unit_of_measure" id="BT-150">Unit code</entry>
+  <entry key="xr:Invoiced_item_VAT_category_code" id="BT-151">Value added tax</entry>
+  <entry key="xr:Invoiced_item_VAT_rate" id="BT-152">VAT rate in percent</entry>
   <entry key="xr:Item_name" id="BT-153">Name</entry>
   <entry key="xr:Item_description" id="BT-154">Description</entry>
-  <entry key="xr:Item_Sellers_identifier" id="BT-155">Item identifier</entry> <!-- Item number -->
+  <entry key="xr:Item_Sellers_identifier" id="BT-155">Item number</entry>
   <entry key="xr:Item_Buyers_identifier" id="BT-156">Buyer's item identifier</entry>
   <entry key="xr:Item_standard_identifier" id="BT-157_identifier">Item standard identifier</entry>
   <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157_scheme">Item standard <identification></identification> scheme</entry> <!-- Item identification scheme -->
-  <entry key="xr:Item_classification_identifier" id="BT-158">Item classification code</entry> <!-- Item classification code -->
+  <entry key="xr:Item_classification_identifier" id="BT-158">Item classification code</entry>
   <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_scheme">Item classification code scheme</entry>
-  <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme_version">Version of the item classification code scheme
-    for creating the schema</entry> <!-- Schema version -->
+  <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme_version">Schema version</entry>
   <entry key="xr:Item_country_of_origin" id="BT-159">Country of origin</entry> <!-- VAT currency code -->
   <entry key="xr:Invoice_line_allowance_base_amount" id="BT-137">Base amount (net)</entry>
   <entry key="xr:Invoice_line_allowance_percentage" id="BT-138">Percentage</entry>
   <entry key="xr:Invoice_line_allowance_amount" id="BT-136">Allowance (net)</entry>
-  <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Allowance reason</entry> <!-- Allowance reason -->
-  <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Allowance reason code</entry> <!-- <entry key="Code für den Nachlassgrund">Allowance reason code</entry> -->
+  <entry key="xr:Invoice_line_allowance_reason" id="BT-139">Allowance reason</entry>
+  <entry key="xr:Invoice_line_allowance_reason_code" id="BT-140">Allowance reason code</entry>
   <entry key="xr:Invoice_line_charge_base_amount" id="BT-142">Basic amount (net)</entry>
   <entry key="xr:Invoice_line_charge_percentage" id="BT-143">Percentage</entry>
   <entry key="xr:Invoice_line_charge_amount" id="BT-141">Surcharge (net)</entry>
-  <entry key="xr:Invoice_line_charge_reason" id="BT-144">Reason for the surcharge</entry> <!-- <entry key="Grund des Zuschlags">Reason for the surcharge</entry> -->
-  <entry key="xr:Invoice_line_charge_reason_code" id="BT-145">Code for the reason for the award</entry> <!-- <entry key="Code für den Zuschlagsgrund">Surcharge reason code</entry> -->
+  <entry key="xr:Invoice_line_charge_reason" id="BT-144">Reason for the surcharge</entry>
+  <entry key="xr:Invoice_line_charge_reason_code" id="BT-145">Surcharge reason code</entry>
   <entry key="uebersicht">Overview</entry>
   <entry key="uebersichtKaeufer" id="BG-7">Information about the buyer</entry>
   <entry key="uebersichtVerkaeufer" id="BG-4">Information about the seller</entry>
   <entry key="uebersichtRechnungsInfo" id="invoice-data">Invoice data</entry>
   <entry key="uebersichtRechnungsuebersicht" id="BG-22">Invoice totals</entry>
-  <entry key="uebersichtUmsatzsteuer" id="BG-23">VAT Breakdown</entry> <!-- <entry key="Aufschlüsselung der Umsatzsteuer auf Ebene der Rechnung">Sales tax breakdown at invoice level</entry> -->
-  <entry key="uebersichtNachlass" id="BG-20">Allowances at invoice level</entry> <!-- <entry key="Nachlass auf Ebene der Rechnung">Invoice level discount</entry> -->
-  <entry key="uebersichtZuschlaege" id="BG-21">Charges at invoice level</entry> <!-- <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry> -->
+  <entry key="uebersichtUmsatzsteuer" id="BG-23">Sales tax breakdown at invoice level</entry>
+  <entry key="uebersichtNachlass" id="BG-20">Invoice level discount</entry>
+  <entry key="uebersichtZuschlaege" id="BG-21">Invoice level surcharge</entry>
   <entry key="uebersichtRechnungAbrechnungszeitraum">Billing period</entry>
   <entry key="uebersichtRechnungPreviousBechungen">Previous invoices</entry>
   <entry key="uebersichtZahlungInfo" id="BG-4">Payment data</entry>
@@ -218,7 +217,7 @@
   <entry key="detailsPositionNachlaesse" id="BG-27">Allowances on invoice item level</entry>
   <entry key="detailsPositionZuschlaege" id="BG-28">Charges at invoice item level</entry>
   <entry key="detailsPositionArtikelinformationen" id="BG-31">Item information</entry>
-  <entry key="detailsPositionArtikeleigenschaften" id="BG-32">Item properties</entry> <!-- Properties of the item -->
+  <entry key="detailsPositionArtikeleigenschaften" id="BG-32">Properties of the item</entry>
   <entry key="zusaetze">Supplements</entry>
   <entry key="zusaetzeVerkaeufer" id="BG-4">Information about the seller</entry>
   <entry key="zusaetzeSteuervertreter" id="BG-11">Tax representative of the seller</entry>
